--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "test": "mocha || true"
+    "test": "NODE_ENV='test' mocha specs/**/*.spec.js || true"
   },
   "author": "Jake Loew",
   "license": "MIT",
