--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server",
+    "dev": "NODE_ENV='development' webpack -w & nodemon server",
     "test": "NODE_ENV='test' mocha specs/**/*.spec.js || true"
   },
   "author": "Jake Loew",
@@ -16,11 +16,19 @@
     "helmet": "^3.22.0",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sequelize": "^5.21.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
